Fixed spacing for the timeline and introduced some extra SCSS variables

--- a/resources/css/components/timeline.scss
+++ b/resources/css/components/timeline.scss
@@ -1,5 +1,8 @@
 $timeline-background-color: $primary-background;
 $timeline-border-color: $primary;
+$timeline-block-spacing: 3rem 1.5rem; // spacing around timeline item content
+$timeline-block-width: 750px;
+$timeline-space: 15%; // amount of space the timeline column takes
 
 .timeline {
   width: 100%;
@@ -34,15 +37,15 @@ $timeline-border-color: $primary;
       justify-content: center;
 
       img {
-        width: 750px;
+        width: $timeline-block-width;
         height: 440px;
         object-fit: cover;
-        padding: 3rem 1.5rem;
+        padding: $timeline-block-spacing;
       }
     }
 
     .timeline-marker {
-      flex-basis: 25%;
+      flex-basis: $timeline-space;
       flex-grow: 1;
       flex-shrink: 1;
       order: 2;
@@ -84,11 +87,12 @@ $timeline-border-color: $primary;
       display: flex;
       flex-direction: column;
       text-align: left;
-      align-items: start;
+      align-items: center;
       justify-content: center;
 
-      & > * {
-        padding-left: 3rem;
+      .timeline-content-wrapper {
+        width: $timeline-block-width;
+        padding: $timeline-block-spacing;
       }
     }
 
@@ -101,10 +105,6 @@ $timeline-border-color: $primary;
 
       .timeline-content {
         order: 3;
-
-        & > * {
-          padding-left: 0;
-        }
       }
     }
   }
